crates/rargs/tests/snapshots/test_scripts__impl-292.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] private.sh connect --protocol ssh -v localhost"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
SSH!!!

args:
- rargs_host = localhost
- rargs_input = ([0] = "--protocol"
- [1] = "ssh"
- [2] = "-v"
- [3] = "localhost")
- rargs_protocol = ssh
- rargs_username = ssh_ser
- rargs_verbose = 1

