crates/rargs/tests/snapshots/test_scripts__impl-37.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] commands-nested.sh dir"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing command. Select one of [33mlist, remove[31m[0m

Directory commands

[4mUsage:[0m
  dir [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  dir -h|--help
  dir -v|--version

[4mCommands:[0m
  list ...... Show files in the directory
  remove .... Remove directory

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

