crates/rargs/tests/snapshots/test_scripts__stderr catch-all-global.sh multiple.snap
---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] catch-all-global.sh multiple"
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing required option: [33mmessage[31m[0m

With a multiple required argument

[4mUsage:[0m
  multiple [OPTIONS] MESSAGE... ...
  multiple -h|--help

[4mArguments:[0m
  MESSAGE
    Message
    [@required, @multiple]
  GLOBAL_REQUIRED_ADDITIONAL_ARGUMENTS
    Required additional arguments

[4mOptions:[0m
  -d --debug
    Debug mode
  -h --help
    Print help

